tests/neg/trailing-comma-pattern.scala
object Test:
  val List(x, y, _*,
// error
